--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/Server
+MONGO_URI=mongodb+srv://naruephat:1234@cluster0.ajcy1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=qwertyuiop
 TELEGRAM_BOT_TOKEN=7519585462:AAG4V_bUg22m14b52-VWIIsIUVViqveeecg
 TELEGRAM_CHAT_ID=8129670982
